fixing header letter spacing

--- a/css/site.css
+++ b/css/site.css
@@ -10,7 +10,7 @@ h1{
 }
 
 h2{
-	letter-spacing: -0.05em;
+	letter-spacing: -0.02em;
 	font-weight: bold;
 }
 
